[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stella-harbor"
version = "0.6.0"
description = "Harbor installed-agent adapter for the Stella coding CLI"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "Oxagen", email = "dev@oxagen.sh" }]
keywords = ["benchmark", "harbor", "stella", "terminal-bench", "swe-bench"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]

# The secure anonymous-FD runner mirrors Harbor 0.6.1's Docker Compose exec
# internals because that release's public BaseEnvironment API cannot accept
# stdin bytes. Pin the benchmark runtime rather than silently falling back to
# an environment-variable credential on a drifting implementation.
dependencies = ["harbor==0.6.1"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "ruff>=0.6"]

[project.urls]
Homepage = "https://github.com/macanderson/stella"
Repository = "https://github.com/macanderson/stella"

[project.scripts]
stella-harbor-secure = "stella_harbor.secure_launcher:main"

[tool.setuptools]
packages = ["stella_harbor"]

[tool.setuptools.package-data]
stella_harbor = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
